<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity"
    android:gravity="center"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:weightSum="2">
        <TextView
            android:layout_weight="1"
            android:text="@string/stat_txt_label"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/stats"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textDirection="rtl" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:weightSum="2">
        <TextView
            android:layout_weight="1"
            android:text="@string/count_label"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/counts"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textDirection="rtl"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:weightSum="2">
        <TextView
            android:layout_weight="1"
            android:labelFor="@id/spn_collections"
            android:text="@string/spn_label"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <Spinner
            android:layout_weight="1"
            android:id="@+id/spn_collections"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textDirection="rtl"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:weightSum="2">
        <TextView
            android:layout_weight="1"
            android:text="@string/category_label"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/txt_stand_sit"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textDirection="rtl"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btn_stand"
            android:textSize="11sp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:minHeight="50dp"
            android:minWidth="60dp"
            android:text="@string/btn_stand_label"/>
        <Button
            android:id="@+id/btn_stand_up"
            android:textSize="11sp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:minHeight="50dp"
            android:minWidth="60dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/btn_move_label"/>
        <Button
            android:id="@+id/btn_sit"
            android:textSize="11sp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:minHeight="50dp"
            android:minWidth="60dp"
            android:layout_marginStart="10dp"
            android:text="@string/btn_sit_label"/>
<!--        <Button-->
<!--            android:id="@+id/btn_sit_down"-->
<!--            android:textSize="11sp"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:minHeight="50dp"-->
<!--            android:minWidth="60dp"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:text="@string/btn_sit_down_label"/>-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/btn_start_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="80dp"
            android:minWidth="100dp"
            android:layout_marginEnd="20dp"/>
        <Button
            android:id="@+id/btn_save"
            android:text="@string/btn_save_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="80dp"
            android:minWidth="100dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_auto_stop_label"/>
        <ToggleButton
            android:id="@+id/tgb_auto_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"/>
    </LinearLayout>


</LinearLayout>